# looklift

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  competitors.md  design.md  dev-log.md  requirements.md  tasks.md
docs/history/: dev-log.md  legacy-spec-process.md  legacy-tasks.md
docs/plans/: 2026-07-16-v0.3-precision-loop.md  2026-07-17-v0.4-gui-alpha.md  (+2 more)
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
looklift/: __init__.py  ai_proxy.py  analyzer.py  autorefine.py  batch.py  chat.py  chat_contract.py  cli.py  config.py  intensity.py  library_schema.py  library_store.py  library_tasks.py  library_thumbnails.py  lut.py  platform_files.py  preview.py  provider_http.py  providers.py  render.py  report.py  session_store.py  xmp_reader.py  xmp_writer.py
looklift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
looklift/gui/: api.py  (+7 more)
packaging/: engine_sidecar.py  looklift-engine.spec  smoke_release.py  stage_sidecar.ps1
tests/: conftest.py  test_ai_proxy.py  test_analyzer.py  test_autorefine.py  test_base.py  test_batch.py  test_benchmark.py  test_builtin_looks.py  test_chat.py  test_chat_contract.py  test_cli.py  test_color_space.py  test_config.py  test_contract.py  test_contract_external.py  test_detail.py  test_effects.py  test_gui_analyze_api.py  test_gui_app.py  test_gui_assets.py  test_gui_chat_api.py  test_gui_config_api.py  test_gui_looks_api.py  test_gui_lookstore.py  test_gui_preview_api.py  test_gui_server.py  test_gui_sessions_api.py  test_gui_upload.py  test_intensity.py  test_kernel_fusion.py  test_library_store.py  test_library_tasks.py  test_linear_light.py  test_lut.py  test_lut_render_consistency.py  test_no_numba_runtime.py  test_operators_display.py  test_output_icc.py  test_platform_files.py  test_prepass.py  (+10 more)
(+185 files in other folders)
