[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "looklift"
version = "0.3.0"
description = "Lift the look: AI analyzes a photo's color grade and generates Lightroom presets / RAW sidecars"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "liujsh" }]
dependencies = [
    "anthropic>=0.116.0",
    "Pillow>=10.0.0",
    "numpy>=1.26",
]
keywords = ["lightroom", "photography", "color-grading", "preset", "xmp", "claude"]

[project.urls]
Repository = "https://github.com/liujsh/looklift"

[project.scripts]
looklift = "looklift.cli:main"

[project.optional-dependencies]
gui = ["pywebview>=5,<6"]

[tool.setuptools]
packages = ["looklift", "looklift.gui"]

[tool.setuptools.package-data]
looklift = ["gui/static/**"]
